First publish of new site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,175 @@
-Site under maintenance
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>zachpepsin.com</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+	</head>
+	<body class="is-preload">
+
+		<!-- Nav -->
+			<nav id="nav">
+				<ul class="container">
+					<li><a href="#top">Top</a></li>
+					<li><a href="#background">Background</a></li>
+					<li><a href="#work">Work</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
+
+		<!-- Home -->
+			<article id="top" class="wrapper style1">
+				<div class="container">
+					<div class="row">
+						<div class="col-4 col-5-large col-12-medium">
+							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+						</div>
+						<div class="col-8 col-7-large col-12-medium">
+							<header>
+								<h1><strong>Zach Pepsin</strong></h1>
+							</header>
+							<p>Philadelphia-based, full-stack <strong>Android Engineer</strong> with over a decade of Android development experience.<br/>Started from the bottom <small>(AsyncTasks in Eclipse)</small>.<br/>Material Design enthusiast, database organizer, actually fixes lint warnings, grandmaster at Googling.</p>
+							<a href="#background" class="button large scrolly">See More</a>
+						</div>
+					</div>
+				</div>
+			</article>
+
+		<!-- Background -->
+			<article id="background" class="wrapper style2">
+				<div class="container">
+					<header>
+						<h2>Background</h2>
+					</header>
+					<div class="row aln-center">
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon featured fa-comments"></span>
+								<h3>Drexel University</h3>
+								<ul>
+									<li>Class of 2016</li>
+									<li>BS in Computer Science</li>
+									<li>Minors in Mathematics, Gaming & Casino Management</li>
+									<li>Concentrations in Software Engineering, Numeric & Symbolic Computation</li>
+								</ul>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon solid featured fa-camera-retro"></span>
+								<h3><a href="#work">RailMe</a></h3>
+								<p>A regional transit app for the Philadelphia area. The #1 PATCO app on Android, in addition to providing schedules and real-time status updates and delays for SEPTA and NJ Transit.</p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon featured fa-thumbs-up"></span>
+								<h3>Interests</h3>
+								<p>Diehard Eagles fan, along with Sixers, NASCAR, and Drexel basketball. Musician (guitar and paino), indie music fiend, and frequent <a href="http://www.uschess.org/msa/MbrDtlMain.php?30192767" target="_blank">chess player</a>.</p>
+							</section>
+						</div>
+					</div>
+					<footer>
+						<a href="#work" class="button large scrolly">See some of my recent work</a>
+					</footer>
+				</div>
+			</article>
+
+		<!-- Work -->
+			<article id="work" class="wrapper style3">
+				<div class="container">
+					<header>
+						<h2>Work Experience and Projects</h2>
+						<p>Pet projects and places I've worked at</p>
+					</header>
+					<div class="row">
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://play.google.com/store/apps/details?id=appinventor.ai_EaglesDudeNFL.RailMe" target="_blank" class="image featured"><img src="images/pic01.png" alt="RailMe Logo"/></a>
+								<h3><a href="https://play.google.com/store/apps/details?id=appinventor.ai_EaglesDudeNFL.RailMe" target="_blank">RailMe</a></h3>
+								<p>A regional transit app for the Philadelphia area. The #1 PATCO app on Android, in addition to providing schedules and real-time status updates and delays for SEPTA and NJ Transit.</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://play.google.com/store/apps/details?id=com.png.sportsbook.google" target="_blank" class="image featured"><img src="images/pic02.png" alt="Barstool Sportsbook and Casino Logo" /></a>
+								<h3><a href="https://play.google.com/store/apps/details?id=com.png.sportsbook.google" target="_blank">Barstool Sportsbook</a></h3>
+								<p>Among the most popular online sportsbooks and casinos in the United States, built with useful Android tools including Dagger, Flow, Coroutines, and <small>(soon)</small> Jetpack Compose.</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://slyce.it/" target="_blank" class="image featured"><img src="images/pic03.jpg" alt="Slyce Logo" /></a>
+								<h3><a href="https://slyce.it/" target="_blank">Slyce</a></h3>
+								<p>A visual search SDK that allows integrated clients to use images to find matching products in their database. Used in Macy's, Home Depot, Bed Bath &amp; Beyond, and American Eagle.</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://www.ibx.com/" target="_blank" class="image featured"><img src="images/pic04.png" alt="Indepence Blue Cross Logo"/></a>
+								<h3><a href="https://www.ibx.com/" target="_blank">IBX</a></h3>
+								<p>The largest health insurer in the Philadelphia area, where I rebranded and refreshed customer portals to make it easier to view health care plan details and submit claims.</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://www.radius180.com/" target="_blank" class="image featured"><img src="images/pic05.png" alt="Radius180 Logo" style="background-color:black;"/></a>
+								<h3><a href="https://www.radius180.com/" target="_blank">Radius180</a></h3>
+								<p>A local IT and software solution company where I found my first professional mobile development expierience, and also a handful of web and SQL projects.</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://www.dechert.com/" target="_blank" class="image featured"><img src="images/pic06.jpg" alt="Dechert Logo" /></a>
+								<h3><a href="https://www.dechert.com/" target="_blank">Dechert</a></h3>
+								<p>A multinational law firm where I primarily wrote scripts to handle file management and cleanup, and created webpages and forms used for collecting information for class action groups.</p>
+							</article>
+						</div>
+					</div>
+					<footer>
+						<a href="#contact" class="button large scrolly">Get in touch with me</a>
+					</footer>
+				</div>
+			</article>
+
+		<!-- Contact -->
+			<article id="contact" class="wrapper style4">
+				<div class="container medium">
+					<header>
+						<h2>Where to find me</h2>
+						<p>Contact me via LinkedIn, or check out my GitHub</p>
+					</header>
+					<div class="row aln-center">
+						<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="zachpepsin" data-version="v1">
+							<a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/zachpepsin?trk=profile-badge" target="_blank">linkedin.com/in/zachpepsin</a>
+						</div>
+						<div>
+							<a href="https://github.com/zachpepsin" target="_blank">
+								<img src="https://ghchart.rshah.org/zachpepsin" alt="zachpepsin's Github chart" />
+							</a>
+						</div>
+						<div class="col-12">
+							<hr />
+							<h3>Links</h3>
+							<ul class="social">
+								<li><a href="https://www.linkedin.com/in/zachpepsin" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/zachpepsin" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							</ul>
+							<hr />
+						</div>
+					</div>
+				</div>
+			</article>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+			<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+	</body>
+</html>
