--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		
 		<!--Metadata for Open Graph link previews-->
-		<meta property="og:title" content="zachpepsin.com" />
+		<meta property="og:title" content="Zach Pepsin" />
 		<meta property="og:type" content="profile"/>
 		<meta property="og:url" content="https://zachpepsin.com/" />
 		<meta property="og:image" content="https://zachpepsin.com/images/ZachPepsinHeadshot.jpg" />
@@ -14,7 +14,7 @@
 		<meta property="og:image:type" content="image/jpeg" /> 
 		<meta property="og:image:width" content="1158" /> 
 		<meta property="og:image:height" content="1158" />
-		<meta property="og:description" content="Zach Pepsin: Philadelphia-based, full-stack Android Engineer." />
+		<meta property="og:description" content="Philadelphia-based, full-stack Android Engineer." />
 
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="shortcut icon" type="image/x-icon" href="faviconzp.ico"/>
