--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>zachpepsin.com</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="author" content="Zach Pepsin">
 		
 		<!--Metadata for Open Graph link previews-->
 		<meta property="og:title" content="Zach Pepsin" />
