Fixed gchart width on mobile

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 						</div>
 						<div>
 							<a href="https://github.com/zachpepsin" target="_blank">
-								<img src="https://ghchart.rshah.org/zachpepsin" alt="zachpepsin's Github chart" />
+								<img class="image gchart" src="https://ghchart.rshah.org/zachpepsin" alt="zachpepsin's Github chart" />
 							</a>
 						</div>
 						<div class="col-12">
