--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>zachpepsin.com</title>
 		<meta charset="utf-8" />
+		<meta name="description" content="Philadelphia-based, full-stack Android Engineer."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="author" content="Zach Pepsin">
 		
