--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
+								<a href="https://play.google.com/store/apps/details?id=com.betfanatics.sportsbook.android" target="_blank" class="image featured"><img src="images/picFanatics.png" alt="Fanatics Sportsbook Logo"/></a>
+								<h3><a href="https://play.google.com/store/apps/details?id=com.betfanatics.sportsbook.android" target="_blank">Fanatics Sportsbook</a></h3>
+								<p>Built with Kotlin Multiplatform and Jetpack Compose, cross-rewarding users with FanCash to redeem on Fanatics.com for the sports apparel and gear of their choice.</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
 								<a href="https://play.google.com/store/apps/details?id=com.espn.bet" target="_blank" class="image featured"><img src="images/picESPNBet.jpg" alt="ESPN Bet Logo"/></a>
 								<h3><a href="https://play.google.com/store/apps/details?id=com.espn.bet" target="_blank">ESPN Bet</a></h3>
 								<p>Sportsbook and Casino with an international reach and one of the most recognizable brands, backed by 100% code coverage and Graph QL, and integration with the ESPN app.</p>
@@ -117,7 +124,7 @@
 							<article class="box style2">
 								<a href="https://play.google.com/store/apps/details?id=com.png.sportsbook.google" target="_blank" class="image featured"><img src="images/pic02.png" alt="Barstool Sportsbook and Casino Logo" /></a>
 								<h3><a href="https://play.google.com/store/apps/details?id=com.png.sportsbook.google" target="_blank">Barstool Sportsbook</a></h3>
-								<p>Among the most popular online sportsbooks and casinos in the United States, built with useful Android tools including Dagger, Flow, Coroutines, and <small>(soon)</small> Jetpack Compose.</p>
+								<p>Among the most popular online sportsbooks and casinos in the United States, built with the latest useful Android tools including Kotlin, Dagger, Flow, and Coroutines</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
