--- a/railme/privacypolicy.html
+++ b/railme/privacypolicy.html
@@ -3,6 +3,7 @@
     <head>
       <meta charset='utf-8'>
       <meta name='viewport' content='width=device-width'>
+	  <meta name="robots" content="noindex">
       <title>Privacy Policy</title>
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
